<resources>
    <string name="app_name">myGitHub</string>
    <string name="try_again">Coba Lagi</string>
    <string name="something_went_wrong">Oops, terjadi kesalahan</string>
    <string name="repos">Repos</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="retry">Retry</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="add_to_favorite">Add To Favorite</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
</resources>