<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item android:id="@+id/homeFragment"
            android:title="@string/home"
            android:icon="@drawable/ic_home"/>
        <item android:id="@+id/favoriteFragment"
            android:title="@string/favorite"
            android:icon="@drawable/ic_favorite"/>
    </group>
    <item android:title="@string/settings">
        <menu>
            <item android:id="@+id/btnDarkMode"
                android:title="@string/dark_mode"
                android:icon="@drawable/ic_night_mode"
                app:actionViewClass="com.google.android.material.switchmaterial.SwitchMaterial" />
        </menu>
    </item>
</menu>