<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="16dp"
    android:paddingTop="24dp"
    android:paddingBottom="16dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_user"
        android:layout_width="112dp"
        android:layout_height="112dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/Theme.MyGithub.RoundedImage"
        tools:src="@drawable/bg_shimmer_effect" />

    <TextView
        android:id="@+id/tv_repos_count"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@id/text_repos"
        app:layout_constraintTop_toTopOf="@id/iv_user"
        app:layout_constraintStart_toStartOf="@id/text_repos"
        app:layout_constraintEnd_toEndOf="@id/text_repos"
        tools:text="239"/>

    <TextView
        android:id="@+id/text_repos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/repos"
        app:layout_constraintBottom_toBottomOf="@+id/iv_user"
        app:layout_constraintEnd_toStartOf="@+id/text_followers"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/iv_user"
        app:layout_constraintTop_toBottomOf="@id/tv_repos_count" />

    <TextView
        android:id="@+id/tv_followers_count"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/tv_repos_count"
        app:layout_constraintTop_toTopOf="@id/tv_repos_count"
        app:layout_constraintStart_toStartOf="@id/text_followers"
        app:layout_constraintEnd_toEndOf="@id/text_followers"
        tools:text="23K"/>

    <TextView
        android:id="@+id/text_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/followers"
        app:layout_constraintEnd_toStartOf="@+id/text_following"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_repos"
        app:layout_constraintTop_toTopOf="@id/text_repos" />

    <TextView
        android:id="@+id/tv_following_count"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toBottomOf="@id/tv_repos_count"
        app:layout_constraintTop_toTopOf="@id/tv_repos_count"
        app:layout_constraintStart_toStartOf="@id/text_following"
        app:layout_constraintEnd_toEndOf="@id/text_following"
        tools:text="239"/>

    <TextView
        android:id="@+id/text_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/following"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_followers"
        app:layout_constraintTop_toTopOf="@id/text_repos" />

    <TextView
        android:id="@+id/tv_user_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/iv_user"
        app:layout_constraintStart_toStartOf="@id/iv_user"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="User"/>

    <TextView
        android:id="@+id/tv_full_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_user_type"
        app:layout_constraintStart_toStartOf="@id/iv_user"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Rijal Muhyidin"/>

    <TextView
        android:id="@+id/tv_user_bio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:lineSpacingMultiplier="1.2"
        app:layout_constraintTop_toBottomOf="@id/tv_full_name"
        app:layout_constraintStart_toStartOf="@id/iv_user"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Never stop dreaming..."/>

</androidx.constraintlayout.widget.ConstraintLayout>